🔧 Fix layout issues

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -45,6 +45,10 @@ h1, h2, h3, h4, h5, h6
 
 .content
   p
+    display: flex
+    img
+      margin-left: auto;
+      margin-right: auto;
     a
       color: $black !important
     a:hover
@@ -166,7 +170,7 @@ $menu-label-color: $white-ter
     text-align: right
     
     a
-      color: white 
+      color: white !important
     a:hover
       color: $pink
 
